--- a/styles/index.css
+++ b/styles/index.css
@@ -89,7 +89,7 @@ body.discount-none #discount-bar {
 .carousel-item img {
   width: 100%;
   height: 650px;
-  object-fit: cover; /* Makes image fill container without stretching */
+  object-fit: cover; 
 }
 
 .carousel-indicators [data-bs-target] {
@@ -109,8 +109,6 @@ body.discount-none #discount-bar {
 }
 
 /* =====================================================RESPONSIVENESS============================================================ */
-
-/* Extra small screens: fix image height */
 @media (max-width: 768px) {
   .carousel-item img {
     height: 300px;
